--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,44 +4,59 @@
     box-sizing: border-box;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url("../images/background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    position: -webkit-sticky;
+    position: sticky;  
+}
+
 header {
     display: flex;
-    padding: 20px 35px;
-    background-color: aquamarine;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 700px;
     width: 100%;
     margin: 0px;
     padding: 0px;
 }   
 
 .profile-pic img {
-    margin: 10px 20px;
-    width: 150px;
-    border: 5px solid black;
-    border-radius: 25%;
+    width: 200px;
+    border: 5px solid white;
+    border-radius: 45%;
 }
 
 .header-content {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
 }
 
 .header-content h1 {
-    width:450px;
+    background-color: white;
+    width:350px;
     margin-top: 10px;
-    margin-left: 20px;
     font-size: 36px;
+    text-align: center;
 }
 
 .header-content nav {
+    margin-top: 100px;
     width: 100%;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
 }
 
 .header-content nav ul {
     display: flex; 
+    justify-content: space-around;
 }
 
 .header-content nav ul li {
@@ -50,8 +65,41 @@ header {
 
 .header-content nav ul li a {
     text-decoration: none;
-    padding: 10px 15px;
     font-size: 28px;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    /* text-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
     font-weight: lighter;
+    border: 5px solid white;
+    border-radius: 30%;
+    padding: 10px;
+    color: black;
+    background: white;
+}
+
+header nav ul li a:hover {
+    background: rgba(0, 0, 0, 0);
+    border-radius: 30%;
+    text-shadow: none;
+}
+
+.about-me {
+    width: 50%;
+    margin-bottom: 50px;
+}
+
+.my-projects {
+    width: 50%;
+    margin-bottom: 50px;
+}
+
+.section-title {
+    text-align: center;
+    color: white;
+    font-size: 28px;
+}
+
+.section-paragraph {
+    margin-top: 15px;
+    text-align: center;
+    color: white;
+    font-size: 18px;
 }
