--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,34 +83,37 @@ header nav ul li a:hover {
 
 #about-me {
     width: 50%;
-    margin-bottom: 50px;
+    margin-bottom: 75px;
 }
 
 #my-projects {
-    width: 50%;
-    margin-bottom: 50px;
+    width: 75%;
+    margin-bottom: 75px;
 }
 
 #contact-me {
     width: 50%;
-    margin-bottom: 50px;
+    margin-bottom: 75px;
 }
 
 .section-title {
     text-align: center;
-    color: white;
+    color: black;
+    background-color: white;
     font-size: 28px;
 }
 
 .section-paragraph {
     margin-top: 15px;
     text-align: center;
-    color: white;
+    color: black;
     font-size: 18px;
+    background: white;
 }
 
 #my-projects img {
-    width: 200px;
+    width: 300px;
+    border: 5px solid white;
 }
 
 #projects-icons {
@@ -122,11 +125,12 @@ header nav ul li a:hover {
 
 #projects-icons a {
     text-decoration: none;
-    color: white;
+    color: black;
+    background-color: white;
+    padding-bottom: 10px;
 }
 
 #projects-icons img:hover {
     width: 400px;
 }
-
 
