adde the contact me section / added enhancements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,16 +84,25 @@ header nav ul li a:hover {
 #about-me {
     width: 50%;
     margin-bottom: 75px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #my-projects {
     width: 75%;
     margin-bottom: 75px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #contact-me {
     width: 50%;
     margin-bottom: 75px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .section-title {
@@ -101,6 +110,7 @@ header nav ul li a:hover {
     color: black;
     background-color: white;
     font-size: 28px;
+    width: 30%;
 }
 
 .section-paragraph {
@@ -108,7 +118,7 @@ header nav ul li a:hover {
     text-align: center;
     color: black;
     font-size: 18px;
-    background: white;
+    /* background: white; */
 }
 
 #my-projects img {
@@ -119,15 +129,17 @@ header nav ul li a:hover {
 #projects-icons {
     margin-top: 15px;
     display: flex;
-    justify-content: space-around;
-    text-align: center;
+    justify-content: space-between;
+    /* text-align: center; */
 }
 
 #projects-icons a {
+    margin: 10px;
     text-decoration: none;
     color: black;
-    background-color: white;
+    /* background-color: white; */
     padding-bottom: 10px;
+    text-align: center;
 }
 
 #projects-icons img:hover {
