--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,12 @@ header {
     padding: 0px;
 }   
 
+.profile-pic {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .profile-pic img {
     width: 200px;
     border: 5px solid white;
@@ -146,3 +152,29 @@ header nav ul li a:hover {
     width: 400px;
 }
 
+@media screen and (max-width: 980px){
+
+    .profile-pic img {
+        width: 40%;
+    }
+
+    .header-content h1 {
+        margin-top: 50px;
+        font-size: 50px;
+    }
+
+    .header-content nav ul {
+        /* flex-direction: column;
+        height: 500px; */
+    }
+
+}
+
+/* 
+@media screen and (max-width: 575px) {
+    .profile-pic img {
+        width: 600px;
+        border: 5px solid white;
+        border-radius: 45%;
+    }
+} */
