--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,10 +19,10 @@ body {
 
 header {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 700px;
     width: 100%;
     margin: 0px;
     padding: 0px;
@@ -45,6 +45,7 @@ header {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    flex-wrap: wrap;
 }
 
 .header-content h1 {
@@ -63,10 +64,12 @@ header {
 .header-content nav ul {
     display: flex; 
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .header-content nav ul li {
     list-style: none;
+    margin: 20px 10px;
 }
 
 .header-content nav ul li a {
@@ -155,23 +158,61 @@ header nav ul li a:hover {
 @media screen and (max-width: 980px){
 
     .profile-pic img {
+        margin-top: 20%;
         width: 40%;
+    } 
+
+    header {
+        margin-bottom: 400px;
+    }
+
+    .header-content {
+        margin-bottom: 50px;
     }
 
     .header-content h1 {
+        width: auto;
+        margin-top: 80px;
+        font-size: 88px;
+    }
+
+    .header-content nav ul li a {
+        margin-right: 150px;
+        margin-left: 150px;
+        font-size: 60px;
+    }
+
+    /* header {
+        position: relative;
+        padding-bottom: 0;
+        justify-content: center;
+    }
+
+    /* header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+    } */
+
+    /* header nav ul li a {
+        font-size: 20px;
+    } */
+
+
+
+    /* .header-content h1 {
         margin-top: 50px;
         font-size: 50px;
-    }
+    } */
 
-    .header-content nav ul {
-        /* flex-direction: column;
-        height: 500px; */
-    }
+    /* .header-content nav ul {
+        flex-direction: column;
+        height: 500px;
+    } */
 
 }
-
-/* 
-@media screen and (max-width: 575px) {
+ 
+/* @media screen and (max-width: 575px) {
     .profile-pic img {
         width: 600px;
         border: 5px solid white;
