--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,7 @@ header {
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin: 0px;
-    padding: 0px;
+    padding: 160px 0;
 }   
 
 .profile-pic {
@@ -50,9 +49,9 @@ header {
 
 .header-content h1 {
     background-color: white;
-    width:350px;
+    /* width: 30%; */
     margin-top: 10px;
-    font-size: 36px;
+    font-size: 48px;
     text-align: center;
 }
 
@@ -65,6 +64,7 @@ header {
     display: flex; 
     justify-content: space-around;
     flex-wrap: wrap;
+    align-items: center;
 }
 
 .header-content nav ul li {
@@ -118,16 +118,16 @@ header nav ul li a:hover {
     text-align: center;
     color: black;
     background-color: white;
-    font-size: 28px;
-    width: 30%;
+    width: 100%;
+    font-size: 40px;
+    /* width: 30%; */
 }
 
 .section-paragraph {
     margin-top: 15px;
     text-align: center;
     color: black;
-    font-size: 18px;
-    /* background: white; */
+    font-size: 24px;
 }
 
 #my-projects img {
@@ -136,19 +136,23 @@ header nav ul li a:hover {
 }
 
 #projects-icons {
-    margin-top: 15px;
+    margin-top: 20px;
     display: flex;
     justify-content: space-between;
-    /* text-align: center; */
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 #projects-icons a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 10px;
     text-decoration: none;
     color: black;
-    /* background-color: white; */
     padding-bottom: 10px;
     text-align: center;
+    font-size: 24px;
 }
 
 #projects-icons img:hover {
@@ -157,65 +161,66 @@ header nav ul li a:hover {
 
 @media screen and (max-width: 980px){
 
-    .profile-pic img {
-        margin-top: 20%;
-        width: 40%;
-    } 
-
     header {
-        margin-bottom: 400px;
-    }
-
-    .header-content {
-        margin-bottom: 50px;
+        margin-top: 200px;
+        padding: 60px 0;
     }
 
     .header-content h1 {
-        width: auto;
-        margin-top: 80px;
-        font-size: 88px;
+        width: 100%;
+        font-size: 78px;
+    }
+
+    .header-content nav ul {
+        flex-direction: column;
     }
 
     .header-content nav ul li a {
-        margin-right: 150px;
-        margin-left: 150px;
-        font-size: 60px;
+        font-size: 58px;
     }
 
-    /* header {
-        position: relative;
-        padding-bottom: 0;
-        justify-content: center;
+    .profile-pic img {
+        width: 300px;
+        margin-bottom: 50px;
     }
-
-    /* header nav ul {
-        margin-top: 20px;
+    
+    #about-me {
+        margin-top: 320px;
         width: 100%;
+    }
+
+    #my-projects {
+        width: 100%;
+    }
+
+    #projects-icons {
+        width: 80%;
+    }
+
+    #contact-me {
+        width: 100%;
+    }
+
+    .section-paragraph p {
+        font-size: 48px;
+    }
+
+    #projects-icons {
+        align-items: center;
         justify-content: center;
-    } */
+    }
 
-    /* header nav ul li a {
-        font-size: 20px;
-    } */
+    #projects-icons a img {
+        width: 100%;
+    }
 
 
+}
 
-    /* .header-content h1 {
-        margin-top: 50px;
-        font-size: 50px;
-    } */
-
-    /* .header-content nav ul {
-        flex-direction: column;
-        height: 500px;
-    } */
+@media screen and (max-width: 768px){
 
 }
  
-/* @media screen and (max-width: 575px) {
-    .profile-pic img {
-        width: 600px;
-        border: 5px solid white;
-        border-radius: 45%;
-    }
-} */
+@media screen and (max-width: 575px) {
+
+}
