--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,13 +18,15 @@ body {
 }
 
 header {
+    height: 50vw;
+    width: 100vw;
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    padding: 160px 0;
+    /* width: 100%; */
+    /* padding: 160px 0; */
 }   
 
 .profile-pic {
@@ -166,17 +168,29 @@ header nav ul li a:hover {
 @media screen and (max-width: 980px){
 
     header {
-        margin-top: 200px;
-        padding: 60px 0;
+        flex-direction: row;
+        margin-top: 100px;
+        align-items: flex-start;
+        height: 100vw;
+        /* padding: 60px 0; */
     }
 
     .header-content h1 {
         width: 100%;
         font-size: 78px;
+        margin-top: 85px;
+        background-color: rgba(0, 0, 0, 0);
     }
+
+    /* .header-content nav {
+        display: flex;
+    } */
 
     .header-content nav ul {
         flex-direction: column;
+        padding-right: 250px;
+        line-height: 2;
+
     }
 
     .header-content nav ul li a {
@@ -227,5 +241,11 @@ header nav ul li a:hover {
         width: 100%;
     }
 
+}
 
+@media screen and (max-width: 575px){
+
+    .header-content {
+        flex-direction: column;
+    }
 }
